<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.SettingsFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/Settings_TXT_Header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_header"
            android:textSize="40sp"
            android:maxLines="1"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            />
        <com.google.android.material.button.MaterialButton
            android:textSize="15dp"
            android:switchPadding="100dp"
        android:id="@+id/Settings_SWTCH_UIMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_viewmode"
        android:layout_centerInParent="true"
        android:layout_above="@+id/Settings_BTN_Language"/>
    <com.google.android.material.button.MaterialButton
        android:layout_margin="10dp"
        android:id="@+id/Settings_BTN_Language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:switchPadding="100dp"
        android:text="@string/change_language"
        android:layout_centerInParent="true"/>
        <com.google.android.material.button.MaterialButton
            android:layout_alignParentBottom="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:id="@+id/logout"
            android:layout_marginBottom="60dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</FrameLayout>