<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.WelcomePageFragment"
    android:background="@color/very_light_blue">
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/welcomePage_CARD_welcome"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="-30dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:backgroundTint="@color/medium_blue"
        app:cardCornerRadius="20dp"
        android:elevation="16dp"
        app:cardElevation="16dp">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/welcomePage_TXT_welcomeTitle"
        android:fontFamily="@font/mandali"
        android:layout_marginTop="50dp"
        android:includeFontPadding="false"
        android:layout_marginStart="10dp"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="40sp"
        android:elevation="10dp"/>
        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mandali"
            android:layout_below="@+id/welcomePage_TXT_welcomeTitle"
            android:id="@+id/welcomePage_TXT_welcome"
            android:layout_marginStart="10dp"
            android:text="@string/user"
            android:layout_marginTop="-40dp"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:elevation="10dp"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/my_appointments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomePage_CARD_welcome"
        android:text="@string/my_appointments"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/mandali"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp"
        android:textSize="30sp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@+id/my_appointments"
            android:id="@+id/welcomePage_RV_Appointments"
            android:layout_marginStart="10dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:orientation="horizontal"
            tools:listitem="@layout/appointment"/>
</RelativeLayout>
